--- a/WebApp/Views/Products/Index.cshtml
+++ b/WebApp/Views/Products/Index.cshtml
@@ -7,6 +7,17 @@
 
 <h2>Products</h2>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+
+@* Search box for Product details *@
+<form asp-controller="Products" asp-action="Details" method="get">
+    <label for="id">Product ID:</label>
+    <input type="text" id="id" name="id" required />
+    <button type="submit">Search</button>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -26,9 +37,7 @@
             <td>@product.Price</td>
             <td>@product.Description</td>
             <td>
-                <form asp-action="DeleteConfirmed" asp-route-id="@product.Id" method="post">
-                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this?');">Delete</button>
-                </form>
+                <a asp-action="Delete" asp-route-id="@product.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
     }
