--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -24,9 +24,14 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>    
     <div class="form-group">
-        <label asp-for="StockStatus" class="control-label"></label>
-        <textarea asp-for="StockStatus" class="form-control"></textarea>
-        <span asp-validation-for="StockStatus" class="text-danger"></span>
+        <label asp-for="StockLevel" class="control-label"></label>
+        <textarea asp-for="StockLevel" class="form-control"></textarea>
+        <span asp-validation-for="StockLevel" class="text-danger"></span>
+    </div>
+        <div class="form-group">
+        <label asp-for="CategoryId" class="control-label"></label>
+        <textarea asp-for="CategoryId" class="form-control"></textarea>
+        <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
