--- a/WebApp/Views/Products/Delete.cshtml
+++ b/WebApp/Views/Products/Delete.cshtml
@@ -17,7 +17,7 @@
     </div>
 
     <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id" method="post">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
