--- a/WebApp/Views/Products/Details.cshtml
+++ b/WebApp/Views/Products/Details.cshtml
@@ -10,6 +10,7 @@
     <h2>@Model.Name</h2>
     <p>Price: @Model.Price</p>
     <p>Description: @Model.Description</p>
+    <p>Stock: @Model.StockLevel</p>
 </div>
 
 <a asp-action="Index">Back to List</a>
