--- a/WebApp/Views/Products/Delete.cshtml
+++ b/WebApp/Views/Products/Delete.cshtml
@@ -17,6 +17,7 @@
     </div>
 
     <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id" method="post">
+        @Html.AntiForgeryToken()
         <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
